# rss-fetcher

./: .env.template  .gitignore  .pre-commit-config.yaml  .pre-commit-run.sh  CHANGELOG.md  Makefile  Procfile  README.md  alembic.ini  app.json  autopep8.sh  install.sh  mypy-requirements.txt  mypy.ini  mypy.sh  postdeploy.sh  pyproject.toml  req-deploy.txt  requirements.txt  run-aws-sync.sh  run-fetch-rss-feeds.sh  run-gen-daily-story-rss.sh  run-rss-workers.sh  run-server.sh  run-stats.sh  run-workers.sh  server.py
dashboards/: README.md  rss-fetcher-alerts.json  rss-fetcher.json  staging-rss-fetcher.json
doc/: columns.md  database-changes.md  deployment.md  initial-architecture.md  stats.md
dokku-scripts/: README.md  clone-db.sh  common.sh  config.sh  create-stats.sh  crontab.sh  dburl.sh  deploy.py  http-proxy.sh  install-dokku.conf  install-dokku.sh  instance.sh  push.sh  randomize-feeds.sh  stats-service-proxy.sh  sync-feeds.sh  test-feeds.psql  uninstall-dokku.sh  vars.py
fetcher/: __init__.py  celery.py  config.py  direct.py  domains.py  headhunter.py  logargparse.py  main.py  mcweb_api.py  path.py  pidfile.py  queue.py  scoreboard.py  sentry.py  stats.py  tasks.py  util.py  version.py
fetcher/database/: __init__.py  asyncio.py  engine.py  env.py  functions.py  helpers.py  models.py  property.py  queries.py
fetcher/database/test/: test_models.py
fetcher/database/versions/: 0dffb2c71f4e_reset_fetch_failures.py  20220217_2055_add_stories_table.py  20220218_0905_make_story_url_unique.py  20220526-1319_update_feeds.py  20220526_1437_update_feed_mc_data.py  20220526_1449_add_normalized_story_info.py  20220602_1536_update_feeds_again.py  20220602_1538_prepopulate_feeds.py  20220606_1054_reset_fetch_failures.py  20220714_1503_create_fetch_events.py  20220714_1514_drop_unique_title_constriant.py  20220714_1640_add_story_title_index.py  20220803_2039_drop_duplicate_feeds_ids.py  20220817_1554_rename_media_id_to_sources_id.py  20220826_0012_add_conditional_fetch.py  20220827_1112_add_next_fetch_attempt.py  20220901_2004_add_update_minutes.py  20221016_1439_remove_column_timezones.py  20221024_1234_add_feeds_http_304.py  20221027_1406_indices.py  20221027_1410_system_status.py  20221106_1206_last_fetch_failures_float.py  20221204_0227_add_last_new_stories.py  20221212_1725_add_properties.py  20221219_2028_add_feeds_rss_title.py  20230111_1237_add_poll_minutes.py  20240815_2313_add_stories_sources_id.py  a83638d0280b_update_feeds.py  (+13 more)
fetcher/rss/: footer.template  header.template  item.template  rsswriter.py
fetcher/test/: test_tasks.py  test_util.py
scripts/: clear_queue.py  db_archive.py  fetcher.py  gen_daily_story_rss.py  import_feeds.py  poll_update.py  queue_feeds.py  rss-fetcher-stats.py  server.py  update_feeds.py  worker.py
server/: README.md  __init__.py  auth.py  common.py  feeds.py  rss.py  rss_entries.py  sources.py  stories.py  util.py
stubs/: statsd.pyi
(+4 files in other folders)
