[project]
name = "rss-fetcher"
version = "0.16.10"             # ALSO: update CHANGELOG.md!
description='Media Cloud News Feed Fetcher'
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Rahul Bhargava", email = "r.bhargava@northeastern.edu"},
    {name = "Phil Budne", email = "phil@regressive.org"},
]
classifiers = [
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "python-dotenv ~= 0.20.0",
    "requests ~= 2.32.0",	# update types-requests in mypy-requirements.txt too
    "sentry-sdk[fastapi] ~= 1.10.0",
    "alembic ~= 1.8.0",
    "feedparser ~= 6.0.10",
    "sqlalchemy ~= 2.0.0",
    "psycopg ~= 3.1.0",
    "python-dateutil ~= 2.8.0",
    "mediacloud-metadata ~= 1.4.0",
    "fastapi ~= 0.79.0",
    "Jinja2 ~= 3.1.0",
    "uvicorn ~= 0.19.0",
    "statsd_client ~= 1.0.0",
    "setproctitle ~= 1.3.0",
    # update types-PyYAML in mypy-requirements.txt too:
    "PyYAML ~= 6.0.0",
    "mediacloud ~= 4.3.0",
    "sitemap-tools @ git+https://github.com/mediacloud/sitemap-tools@v2.0.0",
    "mc-manage @ git+https://github.com/mediacloud/mc-manage@v1.1.4",
]

[project.optional-dependencies]
# for pre-commit hook (and "make lint")
# additional packages for mypy belong in pre-commit section below
dev = [
    "pre-commit"
]

# dependencies for mypy (not in user venv):
# .pre-commit-config.yaml uses .pre-commit-run.sh
# to (re)install these in the pre-commit PRIVATE venv
# if this file has changed.
pre-commit = [
  "types-PyYAML ~= 6.0.0",
  "types-requests ~= 2.32.0.20241016",
]

# not tested!
test = [
    "python-dotenv",
    "pytest ~= 7.1.0",
]

[tool.mypy]
# from rss-fetcher via story-indexer!
# originally from https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

# from https://quantlane.com/blog/type-checking-large-codebase/
# in the order they appear:
disallow_untyped_calls = true
disallow_untyped_decorators = true
#disallow_any_generics = true
disallow_subclassing_any = true
warn_redundant_casts = true
warn_unused_configs = true

# look for local stubs to PyPI packages in top level stubs directory
mypy_path = "stubs"

# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#custom-discovery
[tool.setuptools.packages.find]
where = ["."]
include = ["server", "fetcher", "scripts"]
exclude = ["fetcher.test", "fetcher.database.test"]
namespaces = false

[project.urls]
"Homepage" = "https://mediacloud.org"
"Bug Tracker" = "https://github.com/mediacloud/rss-fetcher/issues"
"Source Code" = "https://github.com/mediacloud/rss-fetcher"
